--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,8 @@
 {
-  "extends": "stylelint-config-standard-scss",
+  "extends": [
+    "stylelint-config-standard-scss",
+    "./node_modules/prettier-stylelint/config.js"
+  ],
   "plugins": ["stylelint-order"],
   "rules": {
     "order/order": [
