--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "test task",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "gulp",
-    "stylelint": "gulp stylelint"
+    "fix-styles": "gulp stylelint"
   },
   "author": "Kseniya Smolyar",
   "license": "ISC",
@@ -17,6 +16,9 @@
     "babel-loader": "^9.1.2",
     "browser-sync": "^2.29.3",
     "del": "^6.1.1",
+    "eslint": "^8.42.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-cheerio": "^1.0.0",
@@ -25,11 +27,9 @@
     "gulp-file-include": "^2.3.0",
     "gulp-notify": "^4.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.3",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-stylelint": "^13.0.0",
-    "gulp-svg-sprite": "^2.0.3",
     "gulp-svgmin": "^4.1.0",
     "gulp-tinypng-compress": "^1.2.5",
     "gulp-ttf2woff": "^1.1.1",
@@ -38,6 +38,7 @@
     "gulp-util": "^3.0.8",
     "node-sass": "^9.0.0",
     "postcss-scss": "^4.0.6",
+    "prettier-stylelint": "^0.4.2",
     "sass": "^1.63.2",
     "stylelint": "^14.2.0",
     "stylelint-config-standard-scss": "^3.0.0",
