--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "gulp",
-    "fix-styles": "gulp stylelint"
+    "fix-styles": "gulp stylelint",
+    "build": "gulp build"
   },
   "author": "Kseniya Smolyar",
   "license": "ISC",
