--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,14 +1,18 @@
 name: Build and Deploy
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
 jobs:
   build-and-deploy:
-    concurrency: ci-${{ github-ref }}
+    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Configure Nodde
+        uses: actions/setup-node@v1
+        with:
+          node-version: '18.12.11'
       - name: Install and Build
         run: |
           npm ci
